--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   http: ^0.13.3
   cached_network_image: ^3.0.0
   image_gallery_saver: ^1.6.9
-  permission_handler: ^4.3.0+hotfix.3
+  permission_handler: ^8.1.2
   random_string: ^2.1.0
   dio: ^4.0.0
 
