--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   permission_handler: ^8.1.2
   random_string: ^2.1.0
   dio: ^4.0.0
+  cool_alert: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
